feat(ngx-diff): add CSS variables for customising appearance of diff

--- a/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.html
+++ b/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.html
@@ -27,6 +27,7 @@
       >
         <div class="inline-diff-text">{{ lineDiff[3] }}</div>
       </div>
+      <div class="dmp-margin-bottom-spacer line-content"></div>
     </div>
   </div>
 </div>
