--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,10 @@
     --ngx-diff-line-left-padding: 1rem;
     --ngx-diff-bottom-spacer-height: 1rem;
 
-
+    --ngx-diff-insert-color-darker: color-mix(in srgb, var(--ngx-diff-insert-color), #000 15%);
+    --ngx-diff-insert-color-darkest: color-mix(in srgb, var(--ngx-diff-insert-color), #000 30%);
+    --ngx-diff-delete-color-darker: color-mix(in srgb, var(--ngx-diff-delete-color), #000 15%);
+    --ngx-diff-delete-color-darkest: color-mix(in srgb, var(--ngx-diff-delete-color), #000 30%);
 }
 
 
