--- a/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.scss
+++ b/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.scss
@@ -1,19 +1,61 @@
 :host {
   --ngx-diff-border-color: #888888;
-  --ngx-diff-font-size: 1rem;
+  --ngx-diff-font-size: 0.9rem;
   --ngx-diff-font-family: Consolas, Courier, monospace;
   --ngx-diff-font-color: #000000;
   --ngx-diff-line-number-font-color: #484848;
   --ngx-diff-line-number-hover-font-color: #ffffff;
   --ngx-diff-selected-border-color: #ff8000;
-  --ngx-diff-inserted-background-color: #9dff97;
-  --ngx-diff-deleted-background-color: #ff8c8c;
-  --ngx-diff-equal-background-color: #ffffff;
-  --ngx-diff-margin-background-color: #dedede;
+
   --ngx-diff-line-number-width: 2rem;
   --ngx-diff-border-width: 1px;
   --ngx-diff-line-left-padding: 1rem;
   --ngx-diff-bottom-spacer-height: 1rem;
+  --ngx-diff-title-bar-padding: 0.5rem;
+  --ngx-diff-title-font-weight: 600;
+
+  --ngx-diff-insert-color: #d6ffd6;
+  --ngx-diff-delete-color: #ffd6d6;
+  --ngx-diff-equal-color: #ffffff;
+  --ngx-diff-mix-color: #000;
+  --ngx-diff-light-mix-percentage: 2%;
+  --ngx-diff-heavy-mix-percentage: 10%;
+
+  --ngx-diff-inserted-background-color: var(--ngx-diff-insert-color);
+  --ngx-diff-deleted-background-color: var(--ngx-diff-delete-color);
+  --ngx-diff-equal-background-color: var(--ngx-diff-equal-color);
+  --ngx-diff-margin-background-color: color-mix(in srgb, var(--ngx-diff-equal-color), var(--ngx-diff-mix-color) var(--ngx-diff-light-mix-percentage));
+
+  --ngx-diff-insert-color-darker: color-mix(in srgb, var(--ngx-diff-insert-color), var(--ngx-diff-mix-color) var(--ngx-diff-light-mix-percentage));
+  --ngx-diff-insert-color-darkest: color-mix(in srgb, var(--ngx-diff-insert-color), var(--ngx-diff-mix-color) var(--ngx-diff-heavy-mix-percentage));
+
+  --ngx-diff-delete-color-darker: color-mix(in srgb, var(--ngx-diff-delete-color), var(--ngx-diff-mix-color) var(--ngx-diff-light-mix-percentage));
+  --ngx-diff-delete-color-darkest: color-mix(in srgb, var(--ngx-diff-delete-color), var(--ngx-diff-mix-color) var(--ngx-diff-heavy-mix-percentage));
+}
+
+div.inline-diff-title-bar {
+  background-color: var(--ngx-diff-margin-background-color);
+  font-family: var(--ngx-diff-font-family);
+  font-size: var(--ngx-diff-font-size);
+  font-weight: var(--ngx-diff-title-font-weight);
+  padding: var(--ngx-diff-title-bar-padding);
+}
+
+div.inline-diff-no-changes-text {
+  font-family: var(--ngx-diff-font-family);
+  font-size: var(--ngx-diff-font-size);
+  font-weight: var(--ngx-diff-title-font-weight);
+  padding: var(--ngx-diff-title-bar-padding);
+  background-color: var(--ngx-diff-equal-background-color);
+  color: var(--ngx-diff-font-color);
+}
+
+.inline-diff-summary-lines-added {
+ color: var(--ngx-diff-insert-color-darkest);
+}
+
+.inline-diff-summary-lines-removed {
+  color: var(--ngx-diff-delete-color-darkest);
 }
 
 div.inline-diff {
@@ -28,7 +70,8 @@ div.inline-diff-content {
   top: 0px;
   left: 0px;
   flex-grow: 1;
-  overflow-x: scroll;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 div.inline-diff-content-wrapper {
@@ -70,11 +113,19 @@ div.inline-diff-text {
 }
 
 .inline-diff-delete {
-  background-color: var(--ngx-diff-deleted-background-color);
+  background-color: var(--ngx-diff-delete-color-darker);
+
+  &.line-content {
+    background-color: var(--ngx-diff-deleted-background-color);
+  }
 }
 
 .inline-diff-insert {
-  background-color: var(--ngx-diff-inserted-background-color);
+  background-color: var(--ngx-diff-insert-color-darker);
+
+  &.line-content {
+    background-color: var(--ngx-diff-inserted-background-color);
+  }
 }
 
 .inline-diff-delete > div {
