--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "ngx-diff/styles/default-theme";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.my-custom-diff-theme {
+  --ngx-diff-font-family: Fira Mono;
+}
 
 @tailwind base;
 @tailwind components;
