--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
   </div>
 </mat-toolbar>
 
-<div class="container mx-auto">
+<div class="container mx-auto p-4">
   <section class="features">
-    <div class="container pt-2">
+    <div class="container">
       <div class="grid gap-2">
         <div class="col-span-2">
           <p>
