fix(ngx-diff): make background color fill full width in horizontal overflow

--- a/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.scss
+++ b/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.scss
@@ -54,7 +54,7 @@ div.sbs-diff-content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  width: 100%;
+  min-width: 100%;
 }
 
 div.sbs-diff-old {
