--- a/projects/ngx-diff/src/lib/components/unified-diff/unified-diff.component.scss
+++ b/projects/ngx-diff/src/lib/components/unified-diff/unified-diff.component.scss
@@ -51,7 +51,7 @@ div.ufd-diff-content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  width: 100%;
+  min-width: 100%;
 }
 
 div.ufd-diff-old {
