feat(ngx-diff): improve tracking on line diff DOM elements

--- a/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.html
+++ b/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.html
@@ -16,7 +16,7 @@
   <div class="sbs-diff">
     <!-- before -->
     <div class="sbs-diff-margin">
-      @for (lineDiff of beforeLines; track lineDiff; let idx = $index) {
+      @for (lineDiff of beforeLines; track lineDiff.id; let idx = $index) {
         <div
           class="line-selector"
           [ngClass]="
@@ -31,7 +31,7 @@
     </div>
     <div class="sbs-diff-content">
       <div class="sbs-diff-content-wrapper">
-        @for (lineDiff of beforeLines; track lineDiff; let idx = $index) {
+        @for (lineDiff of beforeLines; track lineDiff.id; let idx = $index) {
           <div
             class="line-content"
             [ngClass]="
@@ -46,7 +46,7 @@
     </div>
     <!-- after -->
     <div class="sbs-diff-margin">
-      @for (lineDiff of afterLines; track lineDiff; let idx = $index) {
+      @for (lineDiff of afterLines; track lineDiff.id; let idx = $index) {
         <div
           class="line-selector"
           [ngClass]="
@@ -61,7 +61,7 @@
     </div>
     <div class="sbs-diff-content">
       <div class="sbs-diff-content-wrapper">
-        @for (lineDiff of afterLines; track lineDiff; let idx = $index) {
+        @for (lineDiff of afterLines; track lineDiff.id; let idx = $index) {
           <div
             class="line-content"
             [ngClass]="
