chore: update to MD3 components and styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,112 +1,114 @@
-<mat-toolbar color="primary">
-  <div class="w-full flex items-center">
-    <span>ngx-diff</span>
-    <div class="grow"></div>
+<div class="container mx-auto">
+  <mat-toolbar color="primary">
+    <div class="w-full flex items-center">
+      <span>ngx-diff</span>
+      <div class="grow"></div>
 
-    <a href="https://github.com/rars/ngx-diff" mat-button>
-      <fa-icon [icon]="['fab', 'github']"></fa-icon> GitHub
-    </a>
-    <a
-      href="https://www.npmjs.com/package/ngx-diff?activeTab=readme"
-      mat-button
-    >
-      <fa-icon [icon]="['fab', 'npm']"></fa-icon> npm
-    </a>
-    <button
-      mat-icon-button
-      type="button"
-      (click)="toggleDarkMode()"
-      matTooltip="Toggle between light and dark mode"
-    >
-      <mat-icon>{{ isDarkMode ? "light_mode" : "dark_mode" }}</mat-icon>
-    </button>
-  </div>
-</mat-toolbar>
+      <a href="https://github.com/rars/ngx-diff" mat-button>
+        <fa-icon [icon]="['fab', 'github']"></fa-icon> GitHub
+      </a>
+      <a
+        href="https://www.npmjs.com/package/ngx-diff?activeTab=readme"
+        mat-button
+      >
+        <fa-icon [icon]="['fab', 'npm']"></fa-icon> npm
+      </a>
+      <button
+        mat-icon-button
+        type="button"
+        (click)="toggleDarkMode()"
+        matTooltip="Toggle between light and dark mode"
+      >
+        <mat-icon>{{ isDarkMode ? "light_mode" : "dark_mode" }}</mat-icon>
+      </button>
+    </div>
+  </mat-toolbar>
 
-<div class="container mx-auto p-4">
-  <section class="features">
-    <div class="container">
-      <div class="grid gap-2">
-        <div class="col-span-2">
-          <p>
-            ngx-diff is a free Angular library for displaying unified or
-            side-by-side diffs.
-          </p>
-          <br />
-          <p>Try editing the text below to see how the diff updates:</p>
-        </div>
-        <div class="col-span-1">
-          <mat-form-field class="w-full">
-            <mat-label>Before</mat-label>
-            <textarea
-              matInput
-              [(ngModel)]="oldText"
-              style="height: 13rem"
-            ></textarea>
-          </mat-form-field>
-        </div>
-        <div class="col-span-1">
-          <mat-form-field class="w-full">
-            <mat-label>After</mat-label>
-            <textarea
-              matInput
-              [(ngModel)]="newText"
-              style="height: 13rem"
-            ></textarea>
-          </mat-form-field>
-        </div>
-        <div class="col-span-2">
-          <div class="col-12">
-            <mat-card appearance="outlined">
-              <mat-card-header>
-                <mat-card-title>Unified diff</mat-card-title>
-              </mat-card-header>
-              <mat-card-content>
-                <ngx-unified-diff
-                  class="w-full my-custom-diff-theme"
-                  [ngClass]="
-                    isDarkMode
-                      ? ['ngx-diff-dark-theme']
-                      : ['ngx-diff-light-theme']
-                  "
-                  title="github.com/rars/ngx-diff/fruitlist.txt"
-                  [before]="oldText"
-                  [after]="newText"
-                  [lineContextSize]="4"
-                >
-                </ngx-unified-diff>
-              </mat-card-content>
-            </mat-card>
+  <div class="container mx-auto p-4">
+    <section class="features">
+      <div class="container">
+        <div class="grid gap-2">
+          <div class="col-span-2">
+            <p>
+              ngx-diff is a free Angular library for displaying unified or
+              side-by-side diffs.
+            </p>
             <br />
-            <mat-card appearance="outlined">
-              <mat-card-header>
-                <mat-card-title>Side-by-side diff</mat-card-title>
-              </mat-card-header>
-              <mat-card-content>
-                <ngx-side-by-side-diff
-                  class="w-full my-custom-diff-theme"
-                  [ngClass]="
-                    isDarkMode
-                      ? ['ngx-diff-dark-theme']
-                      : ['ngx-diff-light-theme']
-                  "
-                  title="github.com/rars/ngx-diff/fruitlist.txt"
-                  [before]="oldText"
-                  [after]="newText"
-                  [lineContextSize]="4"
-                >
-                </ngx-side-by-side-diff>
-              </mat-card-content>
-            </mat-card>
+            <p>Try editing the text below to see how the diff updates:</p>
+          </div>
+          <div class="col-span-1">
+            <mat-form-field class="w-full">
+              <mat-label>Before</mat-label>
+              <textarea
+                matInput
+                [(ngModel)]="oldText"
+                style="height: 13rem"
+              ></textarea>
+            </mat-form-field>
+          </div>
+          <div class="col-span-1">
+            <mat-form-field class="w-full">
+              <mat-label>After</mat-label>
+              <textarea
+                matInput
+                [(ngModel)]="newText"
+                style="height: 13rem"
+              ></textarea>
+            </mat-form-field>
+          </div>
+          <div class="col-span-2">
+            <div class="col-12">
+              <mat-card appearance="outlined">
+                <mat-card-header>
+                  <mat-card-title>Unified diff</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                  <ngx-unified-diff
+                    class="w-full my-custom-diff-theme"
+                    [ngClass]="
+                      isDarkMode
+                        ? ['ngx-diff-dark-theme']
+                        : ['ngx-diff-light-theme']
+                    "
+                    title="github.com/rars/ngx-diff/fruitlist.txt"
+                    [before]="oldText"
+                    [after]="newText"
+                    [lineContextSize]="4"
+                  >
+                  </ngx-unified-diff>
+                </mat-card-content>
+              </mat-card>
+              <br />
+              <mat-card appearance="outlined">
+                <mat-card-header>
+                  <mat-card-title>Side-by-side diff</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                  <ngx-side-by-side-diff
+                    class="w-full my-custom-diff-theme"
+                    [ngClass]="
+                      isDarkMode
+                        ? ['ngx-diff-dark-theme']
+                        : ['ngx-diff-light-theme']
+                    "
+                    title="github.com/rars/ngx-diff/fruitlist.txt"
+                    [before]="oldText"
+                    [after]="newText"
+                    [lineContextSize]="4"
+                  >
+                  </ngx-side-by-side-diff>
+                </mat-card-content>
+              </mat-card>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-</div>
+    </section>
+  </div>
 
-<router-outlet />
+  <router-outlet />
 
-<div class="m-1 text-center text-xs text-gray-600">
-  &copy; 2024 Richard Russell.
+  <div class="m-1 text-center text-xs text-gray-600">
+    &copy; 2024 Richard Russell.
+  </div>
 </div>
