--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,51 +22,58 @@ body {
 
 @include mat.core();
 
+$scale: -1;
+
 // Define a dark theme
-$dark-theme: mat.m2-define-dark-theme(
+$dark-theme: mat.define-theme(
   (
     color: (
-      primary: mat.m2-define-palette(mat.$m2-pink-palette),
-      accent: mat.m2-define-palette(mat.$m2-blue-grey-palette),
+      theme-type: dark,
+      primary: mat.$violet-palette,
+    ),
+    density: (
+      scale: $scale,
     ),
   )
 );
 
 // Define a light theme
-$light-theme: mat.m2-define-light-theme(
+$light-theme: mat.define-theme(
   (
     color: (
-      primary: mat.m2-define-palette(mat.$m2-indigo-palette),
-      accent: mat.m2-define-palette(mat.$m2-pink-palette),
+      theme-type: light,
+      primary: mat.$violet-palette,
     ),
-    // Only include `typography` and `density` in the default light theme.
-    typography: mat.m2-define-typography-config(),
-    density: 0,
+    density: (
+      scale: $scale,
+    ),
   )
 );
 
-// Apply the dark theme by default
-@include mat.core-theme($light-theme);
-@include mat.button-theme($light-theme);
-@include mat.card-theme($light-theme);
-@include mat.form-field-theme($light-theme);
-@include mat.icon-theme($light-theme);
-@include mat.icon-button-theme($light-theme);
-@include mat.input-theme($light-theme);
-@include mat.toolbar-theme($light-theme);
-@include mat.tooltip-theme($light-theme);
+html {
+  // Apply the dark theme by default
+  @include mat.core-theme($light-theme);
+  @include mat.button-theme($light-theme);
+  @include mat.card-theme($light-theme);
+  @include mat.form-field-theme($light-theme);
+  @include mat.icon-theme($light-theme);
+  @include mat.icon-button-theme($light-theme);
+  @include mat.input-theme($light-theme);
+  @include mat.toolbar-theme($light-theme);
+  @include mat.tooltip-theme($light-theme);
 
-// Apply the light theme only when the user prefers light themes.
-.dark-theme {
-  // Use the `-color` mixins to only apply color styles without reapplying the same
-  // typography and density styles.
-  @include mat.core-color($dark-theme);
-  @include mat.button-color($dark-theme);
-  @include mat.card-color($dark-theme);
-  @include mat.form-field-color($dark-theme);
-  @include mat.icon-color($dark-theme);
-  @include mat.icon-button-color($dark-theme);
-  @include mat.input-color($dark-theme);
-  @include mat.toolbar-color($dark-theme);
-  @include mat.tooltip-color($dark-theme);
+  // Apply the light theme only when the user prefers light themes.
+  .dark-theme {
+    // Use the `-color` mixins to only apply color styles without reapplying the same
+    // typography and density styles.
+    @include mat.core-color($dark-theme);
+    @include mat.button-color($dark-theme);
+    @include mat.card-color($dark-theme);
+    @include mat.form-field-color($dark-theme);
+    @include mat.icon-color($dark-theme);
+    @include mat.icon-button-color($dark-theme);
+    @include mat.input-color($dark-theme);
+    @include mat.toolbar-color($dark-theme);
+    @include mat.tooltip-color($dark-theme);
+  }
 }
