feat(ngx-diff): switch to use Angular signals, enabling use in zoneless apps

--- a/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.html
+++ b/projects/ngx-diff/src/lib/components/inline-diff/inline-diff.component.html
@@ -1,7 +1,7 @@
 <ngx-unified-diff
-  [title]="title"
-  [before]="oldText"
-  [after]="newText"
-  [lineContextSize]="lineContextSize"
+  [title]="title()"
+  [before]="oldText()"
+  [after]="newText()"
+  [lineContextSize]="lineContextSize()"
   (selectedLineChange)="onSelectedLineChange($event)"
 ></ngx-unified-diff>
