--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<div>
+  <textarea [(ngModel)]="oldText"></textarea>
+</div>
+<div>
+  <textarea [(ngModel)]="newText"></textarea>
+</div>
+
 <div class="ngx-diff-light-theme">
   <inline-diff
     class="my-inline-diff-theme"
