feat: update to Angular 21

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,6 +109,6 @@
   <router-outlet />
 
   <div class="m-1 text-center text-xs text-gray-600">
-    &copy; 2024 Richard Russell.
+    &copy; 2024-2025 Richard Russell.
   </div>
 </div>
